--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/date-picker": "^5.5.1",
     "@ionic-native/http": "^4.19.0",
+    "@ionic-native/in-app-browser": "^5.8.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/pro": "2.0.4",
@@ -35,6 +36,7 @@
     "cordova-plugin-datepicker": "0.9.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-inappbrowser": "3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -70,7 +72,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-datepicker": {}
+      "cordova-plugin-datepicker": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
